--- a/src/table/styles/table.scss
+++ b/src/table/styles/table.scss
@@ -41,11 +41,18 @@
     > button,
     > a {
         display: inline-block;
-        margin-right: variables.$operation-link-margin-y;
-
-        &:last-child {
-            margin-right: 0;
+        margin-left: variables.$table-operation-column-spacing;
+        &:first-child {
+            margin-left: 0px;
         }
+    }
+
+    > .thy-action + a,
+    > a + .thy-action {
+        margin-left: variables.$table-operation-column-spacing - 8px;
+    }
+    > .thy-action + .thy-action {
+        margin-left: variables.$table-operation-column-spacing - 16px;
     }
 }
 
